--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,28 @@ orbs:
   python: circleci/python@0.2.1
 
 jobs:
-  build-and-test:
+  build:
+    docker:
+      - image:circleci/python3.7
+
+    working_directory: ~/repo 
+    
     executor: python/default
+    
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
-          command: ./manage.py test
-          name: Test
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            flake8 --exclude=venv* --statistics
+            pytest -v --cov=calculator
 
 workflows:
   main:
