--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
 version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
   build:
     docker:
-      - image:circleci/python3.7
+      - image:circleci/python:3.7
 
     working_directory: ~/repo 
     
