--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2.1
 jobs:
   build:
-    docker:
-      - image:circleci/python:3.7
+    executor: python/default
 
     working_directory: ~/repo 
     
