--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,10 @@
-version: 2.1
+version: 2
+
 jobs:
   build:
-    executor: python/default
+    docker:
+      -image: circleci/python:3.7
+
     working_directory: ~/repo 
 
     steps:
